{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 322,
  "lineage": "9b21d7db-a5de-6446-78e7-9d52b71a3fcd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-retail-de-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07559c53ad7be6e05",
            "association_id": "eipassoc-0c9a93be7fdb1f6d9",
            "domain": "vpc",
            "id": "eipalloc-07559c53ad7be6e05",
            "instance": "i-06bc8bf3f443996c0",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-00878c6dde877a814",
            "private_dns": "ip-10-0-4-44.eu-west-2.compute.internal",
            "private_ip": "10.0.4.44",
            "public_dns": "ec2-3-10-88-184.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.88.184",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.retail_DE_instance_profile",
            "aws_instance.retailDE_ec2_instance_1",
            "aws_security_group.ec2_Retail_DE_security",
            "aws_subnet.retailSubnet",
            "aws_vpc.Retail_DE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "retailDE_ec2_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d0baf788edae448",
            "arn": "arn:aws:ec2:eu-west-2:503289723064:instance/i-06bc8bf3f443996c0",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "retail_DE_instance_profile",
            "id": "i-06bc8bf3f443996c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "retail_SSH_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00878c6dde877a814",
            "private_dns": "ip-10-0-4-44.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cdd0d51630094730",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fae4d14b61f9d020"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0700a6854a35cce0b",
            "tags": {
              "Name": "retailDE_ec2_instance"
            },
            "tags_all": {
              "Name": "retailDE_ec2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fae4d14b61f9d020"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.retail_DE_instance_profile",
            "aws_security_group.ec2_Retail_DE_security",
            "aws_subnet.retailSubnet",
            "aws_vpc.Retail_DE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "retailDE-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:503289723064:internet-gateway/igw-02d50686f1e588857",
            "id": "igw-02d50686f1e588857",
            "owner_id": "503289723064",
            "tags": {
              "Name": "retailDE-env-gw"
            },
            "tags_all": {
              "Name": "retailDE-env-gw"
            },
            "vpc_id": "vpc-0eb1f520ddff86ac1"
          },
          "dependencies": [
            "aws_vpc.Retail_DE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-retailDE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:503289723064:route-table/rtb-0d842e0f61fea29df",
            "id": "rtb-0d842e0f61fea29df",
            "owner_id": "503289723064",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d50686f1e588857",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "reatilDE-env-route-table"
            },
            "tags_all": {
              "Name": "reatilDE-env-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb1f520ddff86ac1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.retailDE-env-gw",
            "aws_vpc.Retail_DE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0978c1c799aa1accf",
            "route_table_id": "rtb-0d842e0f61fea29df",
            "subnet_id": "subnet-0700a6854a35cce0b"
          },
          "dependencies": [
            "aws_route_table.route-table-retailDE",
            "aws_subnet.retailSubnet",
            "aws_vpc.Retail_DE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_Retail_DE_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:503289723064:security-group/sg-0fae4d14b61f9d020",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fae4d14b61f9d020",
            "ingress": [
              {
                "cidr_blocks": [
                  "92.238.132.152/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_Retail_DE_security",
            "name_prefix": "",
            "owner_id": "503289723064",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb1f520ddff86ac1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Retail_DE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_postgres_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:503289723064:security-group/sg-0afcef5675863f4f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afcef5675863f4f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "92.238.132.152/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fae4d14b61f9d020"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds_postgres_sg",
            "name_prefix": "",
            "owner_id": "503289723064",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb1f520ddff86ac1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_Retail_DE_security",
            "aws_vpc.Retail_DE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "postgresql_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:503289723064:subnet/subnet-04f1d1ad16992ed54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f1d1ad16992ed54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503289723064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "postgresql_subnet1"
            },
            "tags_all": {
              "Name": "postgresql_subnet1"
            },
            "vpc_id": "vpc-0eb1f520ddff86ac1"
          },
          "dependencies": [
            "aws_vpc.Retail_DE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "postgresql_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:503289723064:subnet/subnet-08179fbc507abb408",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08179fbc507abb408",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503289723064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "postgresql_subnet2"
            },
            "tags_all": {
              "Name": "postgresql_subnet2"
            },
            "vpc_id": "vpc-0eb1f520ddff86ac1"
          },
          "dependencies": [
            "aws_vpc.Retail_DE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "retailSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:503289723064:subnet/subnet-0700a6854a35cce0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0700a6854a35cce0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503289723064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "retailSubnet"
            },
            "tags_all": {
              "Name": "retailSubnet"
            },
            "vpc_id": "vpc-0eb1f520ddff86ac1"
          },
          "dependencies": [
            "aws_vpc.Retail_DE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Retail_DE_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:503289723064:vpc/vpc-0eb1f520ddff86ac1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b96132b55687235",
            "default_route_table_id": "rtb-0298b354dc7410a4d",
            "default_security_group_id": "sg-09acaea95253d1c99",
            "dhcp_options_id": "dopt-46585d2e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb1f520ddff86ac1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0298b354dc7410a4d",
            "owner_id": "503289723064",
            "tags": {
              "Name": "Retail_DE_VPC"
            },
            "tags_all": {
              "Name": "Retail_DE_VPC"
            }
          }
        }
      ]
    }
  ]
}